# Sales_Forecasting_Remote_Intern

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
artifacts/metrics/: missing_summary.csv  numeric_summary.csv
artifacts/metrics/Model_evaluation/: XGB_RAW_DATA_Compare.csv  XGB_log_sales_Compare.csv  XGB_log_sales_base_model_Compare.csv  XGB_log_sales_champion+week_from_start_Compare.csv  XGB_log_sales_champion+week_of_year_Compare.csv  XGB_log_sales_champion_sin_cos_week_of_year_Compare.csv  XGB_log_sales_is_month_start_end_Compare.csv  XGB_log_sales_is_quarter_start_end_Compare.csv  XGB_log_sales_month_Compare.csv  XGB_log_sales_month_week_of_year_Compare.csv  XGB_log_sales_quarter_Compare.csv  XGB_log_sales_quarter_week_of_year_Compare.csv  XGB_log_sales_sin_cos_month_Compare.csv  XGB_log_sales_week_of_year_Compare.csv  XGB_log_sales_year_Compare.csv  XGB_log_sales_year_month_quarter_Compare.csv
artifacts/metrics/Model_evaluation_lastweek/: XGB_log_sales_all_features_Feature_Importance.csv  XGB_log_sales_base_Compare.csv  XGB_log_sales_base_Feature_Importance.csv  (+66 more)
logs/daily/: log_2025.12.15.md  log_2025.12.17.md  log_2025.12.18.md  log_2025.12.19.md  log_2025.12.21.md  log_2025.12.22.md  log_2025.12.24.md  log_2025.12.28.md  log_2026.1.4.md  log_example.md
scripts/: data_cleaning.py  entrance.py  example.py  load_data.py  spatial_decomposition.py  test.py  test_entry.py
src/sales_forecasting/: Train_Eval.py  data_cleaning.py  data_preprocess.py  example.py  experiment.py  load_data.py  schema.py  spatial_decomposition.py  utils.py
